editor: fix math/formula block getting cut off on mobile (#4023)

--- a/packages/editor/styles/styles.css
+++ b/packages/editor/styles/styles.css
@@ -481,6 +481,10 @@ span:focus .fake-cursor {
   overflow-y: hidden;
 }
 
+.math-block .katex-html {
+  padding-top: 10px;
+}
+
 /* -- Selection Plugin ---------------------------------- */
 
 /* p::selection,
